--- a/Quiz/quizGame.html
+++ b/Quiz/quizGame.html
@@ -266,7 +266,7 @@
 
     <div class="results" id="result" style="display:none;">
       <h2>Score: <span id="score"></span></h2>
-      <div id="personality" class="personality"></div>
+      <div id="scores" class="scores"></div>
       <p id="description"></p>
     </div>
 
@@ -302,7 +302,7 @@
         
         const result = document.getElementById('result');
         const scoreEl = document.getElementById('score');
-        const knowledgeEl = document.getElementById('personality');
+        const knowledgeEl = document.getElementById('scores');
         const descriptionEl = document.getElementById('description');
 
         scoreEl.textContent = score;
@@ -338,3 +338,4 @@
 
   </body>
 </html>
+
