--- a/Quiz/quizGame.html
+++ b/Quiz/quizGame.html
@@ -270,6 +270,10 @@
       <p id="description"></p>
     </div>
 
+    <div class="challenge">
+      <h3>Up for a Personality Test? Find it <a href="../index.html">here</a></h3>
+    </div>
+
 
     <script>
       function calculateResult() {
@@ -338,4 +342,5 @@
 
   </body>
 </html>
+
 
