--- a/Quiz/fakeDatabase.html
+++ b/Quiz/fakeDatabase.html
@@ -44,6 +44,24 @@
     </div>
 
 
+
+    
+    <!-- CHECK OUT SOMETHING ELSE -->
+    <!-- I'll shamelessly be using some <br>s -->
+     <br>
+     <br>
+     <br>
+     <br>
+
+    <div class="challenge">
+      <h3>Personality Test? Find it <a href="index.html">here</a></h3>
+    </div>
+
+    <div class="challenge">
+      <h3>You up for a challenge? Find it <a href="quizGame.html">here</a></h3>
+    </div>
+
+
     <!-- --------------------------------------------------------------- -->
     <!-- --------------------------------------------------------------- -->
 
