--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
     <br>
     <div class="challenge">
       <br>
-      <a href="fakeDatabase.html"><button class="button">Wanna check out some Satellites?</button></a><br>
-      <a href="quizGame.html"><button class="button">You up for a challenge?</button></a><br>
-      <a href="viasat.html"><button class="button">Let's simulate the Viasat Attack!</button></a>
+      <a href="Quiz/fakeDatabase.html"><button class="button">Wanna check out some Satellites?</button></a><br>
+      <a href="Quiz/quizGame.html"><button class="button">You up for a challenge?</button></a><br>
+      <a href="Quiz/viasat.html"><button class="button">Let's simulate the Viasat Attack!</button></a>
     </div>
 
 
@@ -292,6 +292,7 @@
 
   </body>
 </html>
+
 
 
 
