--- a/Quiz/fakeDatabase.html
+++ b/Quiz/fakeDatabase.html
@@ -55,7 +55,7 @@
 
     <div class="challenge">
       <br>
-      <a href="index.html"><button class="button">Personality Test</button></a><br>
+      <a href="../index.html"><button class="button">Personality Test</button></a><br>
       <a href="quizGame.html"><button class="button">You up for a challenge?</button></a><br>
       <a href="viasat.html"><button class="button">Let's simulate the Viasat Attack!</button></a>
     </div>
