--- a/Quiz/viasat.html
+++ b/Quiz/viasat.html
@@ -9,6 +9,11 @@
 <body>
   <div class="container">
     <h1 class="title">⚠️ VIASAT Cyber Attack - 24 Feb 2022</h1>
+
+    <!-- CONTEXT -->
+    <div class="context">
+      <p>On 24 Feb 2022, the KA-SAT network suffered a real cyberattack. This simulation is inspired by that event. No real systems are affected.</p>
+    </div>
     
     <!-- TERMINAL HACKER -->
     <div class="terminal">
