--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       <br>
       <a href="Quiz/fakeDatabase.html"><button class="button">Wanna check out some Satellites?</button></a><br>
       <a href="Quiz/quizGame.html"><button class="button">You up for a challenge?</button></a><br>
-      <a href="Quiz/viasat.html"><button class="button">Let's simulate the Viasat Attack!</button></a>
+      <a href="Quiz/viasat.html"><button class="button">Let's simulate the Viasat Attack!</button></a><br>
       <a href="Quiz/buildSatellite.html"><button class="button">Build your own Satellite!</button></a>
     </div>
 
@@ -293,6 +293,7 @@
 
   </body>
 </html>
+
 
 
 
